* add borderless video mode * video changes re-centre the window always on screen

--- a/lang/en.txt
+++ b/lang/en.txt
@@ -5809,5 +5809,5 @@ before we deal!#
 3932 Unlock achievement "Bad Boy Baron" to unlock this class for every race!#
 3933 Unlock achievement "Bayou Baron" to unlock this class for every race!#
 3934 Unlock achievement "Buggar Baron" to unlock this class for every race!#
-
+3935 borderless#
 3949 end#
