--- a/lang/en.txt
+++ b/lang/en.txt
@@ -5854,10 +5854,10 @@ Changing this gameflag is disabled in current game mode.#
 
             You can always go back to the Hall of Trials
                       later from the Main Menu.#
-3969 Reset Hall of Trials#
+3969 Restart Map#
 3970    Are you sure you want to
    reset the Hall of Trials
-    to its original state?#
+  map to its original state?#
 3971 Achievements#
 3972 Ambient Sound Volume#
 3973 Environment Sound Volume#
