--- a/lang/en.txt
+++ b/lang/en.txt
@@ -5935,4 +5935,5 @@ Changing this gameflag is disabled in current game mode.#
    exiting will delete your save file.#
 3992 https://store.steampowered.com/app/1010820/Barony_Myths__Outcasts/#
 3993 https://store.steampowered.com/app/1010821/Barony_Legends__Pariahs/#
+3994 Crossplay search not enabled#
 3999 end#
