+ Implemented Elixirs of Being and Knowledge

--- a/lang/en.txt
+++ b/lang/en.txt
@@ -4889,6 +4889,10 @@ Increased Dexterity and movement speed#
 3585 boomerang#
 3586 scroll of conjure arrow#
 3587 scroll#
+3588 potion#
+3589 elixir of being#
+3590 potion#
+3591 elixir of knowledge#
 
 3600 You disarm the %s.#
 3601 The %s is whisked away!#
@@ -5936,4 +5940,10 @@ Changing this gameflag is disabled in current game mode.#
 3992 https://store.steampowered.com/app/1010820/Barony_Myths__Outcasts/#
 3993 https://store.steampowered.com/app/1010821/Barony_Legends__Pariahs/#
 3994 Crossplay search not enabled#
-3999 end#
+
+# ***** Chippie's mods!! 4000-4099??? *****
+
+4000 You feel somewhat different.#
+4001 You start thinking differently.#
+
+4099 end#
