--- a/lang/en.txt
+++ b/lang/en.txt
@@ -5985,7 +5985,13 @@ Changing this gameflag is disabled in current game mode.#
 4038 Climb ladder#
 4039 Disarm #
 4040 Interact#
+# Follower interact text
 4041 Interact with...#
 4042 Attack...#
+4043 Attack #
+4044 switch#
+4045 trap#
+4046 item#
+4047 No interactions available#
 
 4049 end#
