* lanterns unstackable, torches degrade by 1 qty every extinguish interval. items degrade by 1 stage when blocking and keep old behavior

--- a/lang/en.txt
+++ b/lang/en.txt
@@ -6055,5 +6055,6 @@ Cast#
  %s!#
 4099 Took %d items from the chest.#
 4100 You have no room left in your pack!#
+4101 You reignite another %s.#
 
 4199 end#
