* succubi shop line change to peoples

--- a/lang/en.txt
+++ b/lang/en.txt
@@ -408,7 +408,7 @@ is a staple down here.#
 thee. Watch out for them.#
 
 232 They say Succubi enjoy
-trying to steal a person's
+trying to steal peoples'
 clothes.#
 
 233 The older food is, the more
